trevrpc-c/include/trevrpc_transport_msquic.h

typedef struct trevrpc_transport_msquic_config_v1 {
    uint32_t struct_size;
    uint32_t struct_version;
    uint32_t flags;
    uint32_t reserved0;
    uint64_t reserved[6];
} trevrpc_transport_msquic_config_v1;
uint32_t trevrpc_transport_msquic_abi_version(void);
void trevrpc_transport_msquic_abi_1_anchor(void);
int trevrpc_transport_msquic_config_v1_init(trevrpc_transport_msquic_config_v1* config, size_t struct_size);
int trevrpc_transport_msquic_create_v1(const trevrpc_transport_config_v1* transport_config,
    const trevrpc_transport_msquic_config_v1* provider_config,
    trevrpc_transport** out_transport);