trevrpc-rust/crates/trevrpc-c-sys/src/lib.rs


#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_ABI_VERSION: u32 = 1;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_STRUCT_VERSION_1: u32 = 1;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_WAKE_COUNT: u32 = 3;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_LISTEN: u32 = 1;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_LISTENER_GET_PORT: u32 = 2;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_DIAL: u32 = 3;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_DIAL_CANCEL: u32 = 4;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_OPEN_BIDI_STREAM: u32 = 5;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_STREAM_SEND: u32 = 6;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_STREAM_RECEIVE: u32 = 7;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_FINISH_SEND: u32 = 8;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_ABORT_RECEIVE: u32 = 9;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_ABORT_SEND: u32 = 10;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_ABORT_STREAM: u32 = 11;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_CLOSE_STREAM: u32 = 12;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_CLOSE_CONNECTION: u32 = 13;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_CLOSE_LISTENER: u32 = 14;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_RELEASE_HANDLE: u32 = 15;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_CLOSE_TRANSPORT: u32 = 16;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_DRAIN: u32 = 17;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_RELEASE_TRANSPORT: u32 = 18;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_ADMISSION_RESPOND: u32 = 19;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_OPERATION_COUNT: usize = 20;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_CHECKPOINT_POST_POP: u32 = 1;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_CHECKPOINT_POST_SEND_ADMISSION: u32 = 2;
#[cfg(feature = "testing")]
pub const TREVRPC_TRANSPORT_TESTING_CHECKPOINT_POST_FINISH_SEND_ADMISSION: u32 = 3;

#[cfg(feature = "testing")]
#[repr(C)]
pub struct trevrpc_transport_testing_control {
    _private: [u8; 0],
}

#[cfg(feature = "testing")]
#[repr(C)]
#[derive(Clone, Copy, Debug, Eq, PartialEq)]
pub struct trevrpc_transport_testing_config_v1 {
    pub struct_size: u32,
    pub struct_version: u32,
    pub event_capacity: u32,
    pub receive_capacity: u32,
    pub status_capacity: u32,
    pub listener_port: u16,
    pub reserved0: u16,
    pub reserved1: u32,
    pub reserved: [u64; 4],
}

#[cfg(feature = "testing")]
#[repr(C)]
#[derive(Clone, Copy, Debug, Eq, PartialEq)]
pub struct trevrpc_transport_testing_event_v1 {
    pub struct_size: u32,
    pub struct_version: u32,
    pub kind: u32,
    pub flags: u32,
    pub status: i32,
    pub subject_kind: u32,
    pub subject: trevrpc_transport_handle_v1,
    pub parent: trevrpc_transport_handle_v1,
    pub operation_id: u64,
    pub application_error_code: u64,
    pub provider_error_code: u64,
    pub protocol: u32,
    pub reserved0: u32,
    pub data: *const u8,
    pub data_len: u64,
    pub headers: *const trevrpc_transport_header_field_v1,
    pub header_count: u64,
    pub method: *const u8,
    pub method_len: u64,
    pub path: *const u8,
    pub path_len: u64,
    pub authority: *const u8,
    pub authority_len: u64,
    pub origin: *const u8,
    pub origin_len: u64,
    pub reserved: [u64; 3],
}

#[cfg(feature = "testing")]
#[repr(C)]
#[derive(Clone, Copy, Debug, Eq, PartialEq)]
pub struct trevrpc_transport_testing_receive_v1 {
    pub struct_size: u32,
    pub struct_version: u32,
    pub flags: u32,
    pub reserved0: u32,
    pub stream: trevrpc_transport_handle_v1,
    pub data: *const u8,
    pub data_len: u64,
    pub reserved: [u64; 3],
}

#[cfg(feature = "testing")]
#[repr(C)]
#[derive(Clone, Copy, Debug, Eq, PartialEq)]
pub struct trevrpc_transport_testing_counters_v1 {
    pub struct_size: u32,
    pub struct_version: u32,
    pub events_injected: u64,
    pub events_popped: u64,
    pub events_released: u64,
    pub receives_injected: u64,
    pub receives_popped: u64,
    pub receives_released: u64,
    pub admissions_responded: u64,
    pub operation_calls: [u64; TREVRPC_TRANSPORT_TESTING_OPERATION_COUNT],
    pub last_operation_id: u64,
    pub last_send_operation_id: u64,
    pub last_dial_operation_id: u64,
    pub last_open_operation_id: u64,
    pub last_admission_status: u64,
    pub last_status: i32,
    pub last_operation: u32,
    pub reserved: [u64; 4],
}

unsafe extern "C" {
    pub fn trevrpc_transport_abi_version() -> u32;
    pub fn trevrpc_transport_abi_1_anchor();

    pub fn trevrpc_transport_config_v1_init(
        config: *mut trevrpc_transport_config_v1,
        struct_size: usize,
    ) -> c_int;
    pub fn trevrpc_transport_endpoint_config_v1_init(
        config: *mut trevrpc_transport_endpoint_config_v1,
        struct_size: usize,
    ) -> c_int;
    pub fn trevrpc_transport_wake_source_v1_init(
        wake_source: *mut trevrpc_transport_wake_source_v1,
        struct_size: usize,
    ) -> c_int;
    pub fn trevrpc_transport_event_info_v1_init(
        info: *mut trevrpc_transport_event_info_v1,
        struct_size: usize,
    ) -> c_int;
    pub fn trevrpc_transport_receive_info_v1_init(
        info: *mut trevrpc_transport_receive_info_v1,
        struct_size: usize,
    ) -> c_int;
    pub fn trevrpc_transport_admission_info_v1_init(
        info: *mut trevrpc_transport_admission_info_v1,
        struct_size: usize,
    ) -> c_int;
    pub fn trevrpc_transport_event_protocol_info_v1_init(
        info: *mut trevrpc_transport_event_protocol_info_v1,
        struct_size: usize,
    ) -> c_int;
    pub fn trevrpc_transport_diagnostics_v1_init(
        diagnostics: *mut trevrpc_transport_diagnostics_v1,
        struct_size: usize,
    ) -> c_int;

    pub fn trevrpc_transport_get_wake_sources_v1(
        transport: *mut trevrpc_transport,
        wake_sources: *mut trevrpc_transport_wake_source_v1,
        capacity: usize,
        out_count: *mut usize,
    ) -> c_int;
    pub fn trevrpc_transport_poll_timeout_ms(transport: *mut trevrpc_transport) -> c_int;
    pub fn trevrpc_transport_next_event(
        transport: *mut trevrpc_transport,
        out_event: *mut *mut trevrpc_transport_event_v1,
    ) -> c_int;
    pub fn trevrpc_transport_event_get_info_v1(
        transport: *mut trevrpc_transport,
        event: *const trevrpc_transport_event_v1,
        info: *mut trevrpc_transport_event_info_v1,
    ) -> c_int;
    pub fn trevrpc_transport_event_get_admission_info_v1(
        transport: *mut trevrpc_transport,
        event: *const trevrpc_transport_event_v1,
        info: *mut trevrpc_transport_admission_info_v1,
    ) -> c_int;
    pub fn trevrpc_transport_event_get_protocol_info_v1(
        transport: *mut trevrpc_transport,
        event: *const trevrpc_transport_event_v1,
        info: *mut trevrpc_transport_event_protocol_info_v1,
    ) -> c_int;
    pub fn trevrpc_transport_admission_respond_v1(
        transport: *mut trevrpc_transport,
        event: *const trevrpc_transport_event_v1,
        http_status: u16,
    ) -> c_int;
    pub fn trevrpc_transport_event_release(
        transport: *mut trevrpc_transport,
        event: *mut trevrpc_transport_event_v1,
    );
    pub fn trevrpc_transport_receive_get_info_v1(
        transport: *mut trevrpc_transport,
        receive: *const trevrpc_transport_receive_v1,
        info: *mut trevrpc_transport_receive_info_v1,
    ) -> c_int;
    pub fn trevrpc_transport_receive_release(
        transport: *mut trevrpc_transport,
        receive: *mut trevrpc_transport_receive_v1,
    );
    pub fn trevrpc_transport_get_diagnostics_v1(
        transport: *mut trevrpc_transport,
        diagnostics: *mut trevrpc_transport_diagnostics_v1,
    ) -> c_int;

    pub fn trevrpc_transport_listen_v1(
        transport: *mut trevrpc_transport,
        config: *const trevrpc_transport_endpoint_config_v1,
        out_listener: *mut trevrpc_transport_handle_v1,
    ) -> c_int;
    pub fn trevrpc_transport_listener_get_port_v1(
        transport: *mut trevrpc_transport,
        listener: trevrpc_transport_handle_v1,
        out_port: *mut u16,
    ) -> c_int;
    pub fn trevrpc_transport_dial_v1(
        transport: *mut trevrpc_transport,
        config: *const trevrpc_transport_endpoint_config_v1,
        operation_id: u64,
        out_connection: *mut trevrpc_transport_handle_v1,
    ) -> c_int;
    pub fn trevrpc_transport_dial_cancel(
        transport: *mut trevrpc_transport,
        connection: trevrpc_transport_handle_v1,
    ) -> c_int;
    pub fn trevrpc_transport_connection_open_bidi_stream_v1(
        transport: *mut trevrpc_transport,
        connection: trevrpc_transport_handle_v1,
        operation_id: u64,
        out_stream: *mut trevrpc_transport_handle_v1,
    ) -> c_int;
    pub fn trevrpc_transport_stream_send_v1(
        transport: *mut trevrpc_transport,
        stream: trevrpc_transport_handle_v1,
        operation_id: u64,
        data: *const u8,
        data_len: usize,
    ) -> c_int;
    pub fn trevrpc_transport_stream_receive(
        transport: *mut trevrpc_transport,
        stream: trevrpc_transport_handle_v1,
        out_receive: *mut *mut trevrpc_transport_receive_v1,
    ) -> c_int;
    pub fn trevrpc_transport_stream_finish_send(
        transport: *mut trevrpc_transport,
        stream: trevrpc_transport_handle_v1,
    ) -> c_int;
    pub fn trevrpc_transport_stream_abort_receive(
        transport: *mut trevrpc_transport,
        stream: trevrpc_transport_handle_v1,
        application_error_code: u64,
    ) -> c_int;
    pub fn trevrpc_transport_stream_abort_send(
        transport: *mut trevrpc_transport,
        stream: trevrpc_transport_handle_v1,
        application_error_code: u64,
    ) -> c_int;
    pub fn trevrpc_transport_stream_abort(
        transport: *mut trevrpc_transport,
        stream: trevrpc_transport_handle_v1,
        application_error_code: u64,
    ) -> c_int;
    pub fn trevrpc_transport_stream_close(
        transport: *mut trevrpc_transport,
        stream: trevrpc_transport_handle_v1,
    ) -> c_int;
    pub fn trevrpc_transport_connection_close(
        transport: *mut trevrpc_transport,
        connection: trevrpc_transport_handle_v1,
        application_error_code: u64,
    ) -> c_int;
    pub fn trevrpc_transport_listener_close(
        transport: *mut trevrpc_transport,
        listener: trevrpc_transport_handle_v1,
    ) -> c_int;
    pub fn trevrpc_transport_release_handle(
        transport: *mut trevrpc_transport,
        handle: trevrpc_transport_handle_v1,
        object_kind: u32,
    ) -> c_int;
    pub fn trevrpc_transport_close(transport: *mut trevrpc_transport) -> c_int;
    pub fn trevrpc_transport_drain(transport: *mut trevrpc_transport) -> c_int;
    pub fn trevrpc_transport_release(transport: *mut trevrpc_transport) -> c_int;

    pub fn trevrpc_transport_msquic_abi_version() -> u32;
    pub fn trevrpc_transport_msquic_abi_1_anchor();
    pub fn trevrpc_transport_msquic_config_v1_init(
        config: *mut trevrpc_transport_msquic_config_v1,
        struct_size: usize,
    ) -> c_int;
    pub fn trevrpc_transport_msquic_create_v1(
        transport_config: *const trevrpc_transport_config_v1,
        provider_config: *const trevrpc_transport_msquic_config_v1,
        out_transport: *mut *mut trevrpc_transport,
    ) -> c_int;
